fix text aligned for current day class

--- a/weather.css
+++ b/weather.css
@@ -34,6 +34,7 @@
   background-color: aquamarine;
 }
 .currentDay {
+  text-align: left;
   font-size: 20px;
   padding-left: 30px;
   min-width: 500px;
